--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,27 @@ jobs:
   build-test:
     uses: liquibase/build-logic/.github/workflows/os-extension-test.yml@v0.2.3
     secrets: inherit
+
+  integration-test:
+    needs: build-test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: Start SingleStoreDB docker image
+        working-directory: src/test/resources/
+        run: docker-compose up -d
+
+      - name: Run Tests With Maven
+        run: mvn --quiet --show-version --batch-mode verify
+
+      - name: Stop SingleStoreDB docker image
+        working-directory: src/test/resources/
+        run: docker-compose down
