--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.liquibase.ext</groupId>
     <artifactId>liquibase-singlestore</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>4.19.2-SNAPSHOT</version>
 
     <name>Liquibase Extension: SingleStoreDB support</name>
     <description>Add this Liquibase extension to your project to support SingleStoreDB</description>
@@ -39,7 +39,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <liquibase.version>4.19.0</liquibase.version>
+        <liquibase.version>4.19.1</liquibase.version>
 
         <dependency.spock.version>1.3-groovy-2.4</dependency.spock.version>
         <groovy.version>2.4.17</groovy.version>        <sonar.organization>liquibase</sonar.organization>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-test-harness</artifactId>
-            <version>1.0.10-SNAPSHOT</version>
+            <version>1.0.9</version>
             <scope>test</scope>
         </dependency>
 
