--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,16 @@
         <liquibase.version>4.19.1</liquibase.version>
 
         <dependency.spock.version>1.3-groovy-2.4</dependency.spock.version>
-        <groovy.version>2.4.17</groovy.version>        <sonar.organization>liquibase</sonar.organization>
-        <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
+        <groovy.version>2.4.17</groovy.version>
+        <sonar.organization>liquibase</sonar.organization>
+        <sonar.projectKey>${project.artifactId}</sonar.projectKey>
         <sonar.projectName>${project.name}</sonar.projectName>
         <sonar.projectDescription>${project.description}</sonar.projectDescription>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.scm.provider>git</sonar.scm.provider>
         <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+        <sonar.sources>src/main/java</sonar.sources>
+        <sonar.tests>src/test/groovy</sonar.tests>
     </properties>
 
     <dependencyManagement>
