--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency.spock.version>1.3-groovy-2.4</dependency.spock.version>
         <groovy.version>2.4.17</groovy.version>
         <sonar.organization>liquibase</sonar.organization>
-        <sonar.projectKey>${project.artifactId}</sonar.projectKey>
+        <sonar.projectKey>liquibase_${project.artifactId}</sonar.projectKey>
         <sonar.projectName>${project.name}</sonar.projectName>
         <sonar.projectDescription>${project.description}</sonar.projectDescription>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
